# pasu

./: .dockerignore  .env.example  .env.ext.example  .env.local.example  .gitignore  .gitleaks.toml  AUDIT-PHASE12-CURVE.md  AUDIT-PHASE13-CURVE.md  AUDIT_PHASE8.md  AUDIT_UNISWAP_MULTICHAIN.md  AUDIT_UNISWAP_PHASE7B.md  Cargo.toml  MERGE_CONFLICT_LOG.md  PHASE1_UNISWAP_RESEARCH.md  README.md  VERIFICATION_UNISWAP_REALTX.md  dambi-sync.toml  deny.toml  docker-compose.yml  package.json  pasu-sync.toml  scopeball-sync.toml
adapter-debug-dashboard/: Cargo.toml
adapter-debug-dashboard/frontend/: package-lock.json
adapter-debug-dashboard/frontend/src/: App.css  App.tsx  api.ts  extension-client.ts  index.css
adapter-debug-dashboard/request-module/: README.md  things.md
adapter-debug-dashboard/request-module/userscript/: scopeball.user.js
adapter-debug-dashboard/src/: etherscan.rs  main.rs
crates/abi-resolver/: Cargo.toml
crates/abi-resolver/data/: sourcify.json
crates/abi-resolver/examples/: decode_any.rs
crates/abi-resolver/scripts/: README.md  build_db.py  curate_bundle.sh  extract_mapping.py
crates/abi-resolver/src/: decode.rs  extract.rs  lib.rs  resolver.rs  sourcify.rs
crates/abi-resolver/tests/: cat_a_recurse.rs  cat_b_v4_router.rs
crates/adapter-cli/: Cargo.toml
crates/adapter-cli/src/: cmd_build.rs  cmd_validate.rs  main.rs  manifest.rs
crates/adapter-samples/erc20-transfer/: Cargo.toml
crates/adapter-sdk/: Cargo.toml
crates/adapter-sdk-macros/: Cargo.toml
crates/adapter-sdk-macros/src/: codegen.rs  lib.rs  parse.rs
crates/adapter-sdk/src/: abi.rs  ctx.rs  lib.rs  manifest.rs  primitives.rs  traits.rs
crates/adapter/abi-resolver/: Cargo.toml
crates/adapter/call-adapter/: Cargo.toml
crates/adapter/sign-resolver/: Cargo.toml
crates/adapters-bundle/: Cargo.toml
crates/adapters-bundle/examples/: e2e_swap.rs
crates/adapters-bundle/src/: eip2612.rs  lib.rs  shim.rs
crates/adapters/eip2612/: Cargo.toml
crates/adapters/mappers/: Cargo.toml
crates/adapters/permit2/: Cargo.toml
crates/adapters/request-router/: Cargo.toml
crates/adapters/uniswap-v2/: Cargo.toml
crates/adapters/uniswap-v3/: Cargo.toml
crates/adapters/universal-router/: Cargo.toml
crates/cedar-wasm-lite/: Cargo.toml
crates/cedar-wasm-lite/pkg/: cedar_wasm_lite.d.ts  cedar_wasm_lite.js  cedar_wasm_lite_bg.wasm  cedar_wasm_lite_bg.wasm.d.ts  package.json
crates/cedar-wasm-lite/src/: lib.rs
crates/integration-tests/: .env.example  .env.sample  .gitignore  ACTIONBODY_EXTENSION_GUIDE.md  Cargo.toml  ONBOARDING_EVIDENCE_TEMPLATE.md  ONBOARDING_PROMPT.md  PROTOCOL_AGNOSTIC_ONBOARDING_FRAMEWORK.md  PROTOCOL_ONBOARDING_AND_TESTING.md  README.md  TOKEN_INVENTORY_GUIDE.md
crates/integration-tests/logs/: README.md
crates/integration-tests/onboarding/: FRAMEWORK_AGNOSTICISM.md  README.md
crates/integration-tests/scripts/: etherscan-bulk-sweep.mjs  etherscan-v2-lp-token-inventory.mjs  verify-edge-matrix.mjs
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: adapter_into_request.rs  all_actions_have_custom.rs  capability_swap_policies.rs  composite_routers.rs  doc_grounding.rs  e2e_new_pipeline.rs  e2e_swap.rs  extension_manifests_validate.rs  extra_swap_policies.rs  golden_regression.rs  host_fact_plan.rs  legacy_examples_moved.rs  lido_peg_enrichment.rs  lido_permit_decode.rs  manifest_driven_swap_e2e.rs  p0_1_action_lowering.rs  pancake_real_tx.rs  policy_json.rs  real_tx_catalog_mapping.rs  schema_validation.rs  signature_golden_vectors.rs  signature_pipeline.rs  swap_schema.rs  tx_pass.rs  uniswap_real_tx.rs  v3_decode_harness.rs  weth_wrap_decode.rs  window_stats.rs
crates/mappers/: Cargo.toml
crates/mappers/examples/: validate_samples.rs
crates/mappers/src/: assembler.rs  context.rs  lib.rs  registry.rs
crates/policy-builder/: Cargo.toml  build.rs
crates/policy-builder/src/: aliases.rs  escape.rs  generator.rs  lib.rs  operators.rs  parser.rs  types.rs  validate.rs
crates/policy-builder/tests/: roundtrip.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine-wasm/: Cargo.toml
crates/policy-engine-wasm/examples/: emit_sim_step_sample.rs
crates/policy-engine-wasm/src/: action_eval_exports.rs  cedar_exports.rs  curve_realtx_tests.rs  declarative_exports.rs  diagnosis_exports.rs  dto.rs  exports.rs  field_catalog.rs  helpers.rs  lib.rs  metamorpho_underlying.rs  policy_request_exports.rs  sim_step_exports.rs  sim_types.rs  trigger_exports.rs
crates/policy-engine-wasm/tests/: cedar_text_est_roundtrip.rs  declarative_v3_route.rs  declarative_v3_typed_data_install.rs  est_roundtrip.rs  field_catalog.rs  field_catalog_real_schema.rs  hl_exchange_deny_e2e.rs  sim_step.rs  swap_min_cap_eval.rs  sweep_recipient_eval.rs  token_reputation_eval_e2e.rs
crates/policy-engine/src/: adapter.rs  approvals.rs  cedar_json.rs  context_keys.rs  core.rs  enrichment.rs  host.rs  lib.rs  lowering.rs  lowering_v2.rs  oracle.rs  pipeline.rs  policy.rs  portfolio.rs  prelude.rs  registry.rs  root.rs  schema.rs  stat_windows.rs
crates/policy-engine/tests/: catalog_conformance.rs  default_policies_v2.rs  hl_exchange_deny_poc.rs  policy_catalog_v2.rs  swap_input_usd_cap_eval.rs  swap_usdc_amount_cap_eval.rs
crates/policy-server/db/: Cargo.toml
crates/policy-server/server/: Cargo.toml  Dockerfile  openapi.yaml
crates/policy_engine_wasm/: Cargo.toml
crates/policy_engine_wasm/src/: dto.rs  exports.rs  lib.rs  state.rs
crates/policy_engine_wasm/tests/: web.rs
crates/web-server/: Cargo.toml
crates/web-server/frontend/: vite.config.ts
crates/web-server/request-module/: README.md
policyschema/: .gitignore  Cargo.toml  README.md
policyschema/docs/: baseline.md  protocol-comparison.md
policyschema/schema/: category.json  fields.json  kind.json  mod.json
policyschema/src/: call.rs  confidence.rs  core.rs  dispatch.rs  extension.rs  lib.rs  raw.rs  request.rs  target.rs  types.rs
policyschema/tests/: fixtures.rs  semi_adapter_round_trip.rs
services/registry-mock/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
(+8420 files in other folders)
