# Optimize wasm-pack release WASM artifact for size. LTO + 1 codegen unit
# recovers ~150-300 KB on the merged build (Phase 7 + 12 + 8) which
# otherwise is ~30 KB over the plan §9 6 MiB target.
[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
resolver = "2"
members = [
    "crates/policy-engine",
    "crates/policy-engine-wasm",
    "crates/integration-tests",
    "crates/adapters/abi-resolver",
    "crates/adapters/sign-resolver",
    "crates/adapters/request-router",
    "adapter-debug-dashboard",
    "crates/adapters/mappers",
    "crates/policy-builder",
    "crates/policy-builder-wasm",
    "crates/simulation/state",
    "crates/simulation/reducer",
    "crates/simulation/db",
    "crates/simulation/sync",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# Pinned versions every crate in this workspace agrees on.
[workspace.dependencies]
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "0.8"
alloy-dyn-abi = "0.8"
anyhow = "1"
cedar-policy = "4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

# Internal crates referenced by path.
policy-engine = { path = "crates/policy-engine", version = "0.1.0" }
abi-resolver = { path = "crates/adapters/abi-resolver", version = "0.1.0" }
sign-resolver = { path = "crates/adapters/sign-resolver", version = "0.1.0" }
mappers = { path = "crates/adapters/mappers", version = "0.1.0" }
request-router = { path = "crates/adapters/request-router", version = "0.1.0" }
policy-builder = { path = "crates/policy-builder", version = "0.1.0" }
simulation-state = { path = "crates/simulation/state", version = "0.1.0" }
simulation-reducer = { path = "crates/simulation/reducer", version = "0.1.0" }
simulation-db = { path = "crates/simulation/db", version = "0.1.0" }
simulation-sync = { path = "crates/simulation/sync", version = "0.1.0" }

# WASM bridge deps
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
