# Optimize wasm-pack release WASM artifact for size. LTO plus a single codegen
# unit keeps the merged build under the WASM artifact target.
[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
resolver = "2"
members = [
    "crates/policy-engine",
    "crates/policy-engine-wasm",
    "crates/integration-tests",
    "crates/adapters/abi-resolver",
    "crates/adapters/mappers",
    "crates/policy-server/asset-model/state",
    "crates/policy-server/asset-model/action",
    "crates/policy-server/asset-model/transition",
    "crates/policy-server/db",
    "crates/policy-server/sync",
    "crates/policy-server/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# Pinned versions every crate in this workspace agrees on.
[workspace.dependencies]
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-sol-types = "0.8"
alloy-dyn-abi = "0.8"
alloy-json-abi = "0.8"
anyhow = "1"
cedar-policy = "4"
hex = "0.4"
# Fixed-point decimal arithmetic used by policy-transition for derived field
# recompute (HF / LTV / PnL / liq_price).
rust_decimal = { version = "1.37", default-features = false, features = ["serde-str", "maths"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

# Internal crates referenced by path.
policy-engine = { path = "crates/policy-engine", version = "0.1.0" }
abi-resolver = { path = "crates/adapters/abi-resolver", version = "0.1.0" }
mappers = { path = "crates/adapters/mappers", version = "0.1.0" }
policy-state = { path = "crates/policy-server/asset-model/state", version = "0.1.0" }
policy-action = { path = "crates/policy-server/asset-model/action", version = "0.1.0" }
policy-transition = { path = "crates/policy-server/asset-model/transition", version = "0.1.0" }
policy-db = { path = "crates/policy-server/db", version = "0.1.0" }
policy-sync = { path = "crates/policy-server/sync", version = "0.1.0" }

# WASM bridge deps
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Sync crate deps (native only)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
async-trait = "0.1"

# TS .d.ts generation — derives `Tsify` on every pub type that crosses the
# wasm boundary. `wasm-bindgen` is required at build time even when only the
# type bindings are emitted (Tsify uses wasm-bindgen's serde glue).
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
