[package]
name = "policyschema"
version = "0.1.0"
edition = "2021"
description = "Cedar 정책 엔진 직전 단계의 공통 Action 데이터 모델"
license = "UNLICENSED"
publish = false

[dependencies]
alloy-primitives = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"
thiserror = "1"
hex = "0.4"

[dev-dependencies]
serde_json = "1.0"
