[package]
name = "policy-engine-adapters-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aggregator: builds default action adapter registries from every internal adapter crate"

[dependencies]
policy-engine.workspace = true
policy-engine-adapter-permit2.workspace = true
policy-engine-adapter-universal-router.workspace = true
policy-engine-adapter-uniswap-v2.workspace = true
policy-engine-adapter-uniswap-v3.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
hex.workspace = true

[[example]]
name = "e2e_swap"
path = "examples/e2e_swap.rs"
