[package]
name = "policy-engine-adapters-bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aggregator: builds default action adapter registries from every internal adapter crate"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
policy-engine.workspace = true
abi-resolver = { workspace = true }
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]

[[example]]
name = "e2e_swap"
path = "examples/e2e_swap.rs"
