[package]
name = "policy-engine-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspace-level integration tests for policy-engine. No public API."
publish = false

[dependencies]
policy-engine.workspace = true
serde_json.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
mappers.workspace = true
request-router.workspace = true
walkdir = "2"
