[package]
name = "policy-engine-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspace-level integration tests for policy-engine. No public API."
publish = false

[dependencies]
policy-engine.workspace = true
serde_json.workspace = true
# v3 ActionBody decode harness (src/harness/** + src/bin/v3_harness.rs).
# These must be normal deps (not dev) because the lib module + CLI bin consume
# them; the test target inherits them transitively.
policy-engine-wasm = { path = "../policy-engine-wasm", version = "0.1.0" }
policy-transition.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
serde = { version = "1", features = ["derive"] }
hex = "0.4"
anyhow = "1"

[dev-dependencies]
abi-resolver.workspace = true
mappers.workspace = true
walkdir = "2"

# v3 ActionBody decode harness CLI. Explicit name keeps the hyphenated invocation
# `cargo run --bin v3-harness`; path under src/bin/ suppresses bin auto-discovery
# for this file. Auto-discovery of tests/*.rs (incl. v3_decode_harness.rs) is
# untouched.
[[bin]]
name = "v3-harness"
path = "src/bin/v3_harness.rs"

[[bin]]
name = "check-onboarding-evidence"
path = "src/bin/check_onboarding_evidence.rs"
