[package]
name = "policy-engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Force wasm-opt -Oz (size-optimal) + --strip-debug for production release
# builds. Plan §9 NEVER guardrail: WASM size > 6 MiB. After merging Phase
# 7 + Phase 8 + Phase 12 (Curve) the artifact grew to 6.02 MiB even with
# -Oz alone — --strip-debug recovers the ~30 KB budget. No effect on
# Cargo profile.release — only the wasm-pack post-processing step.
[package.metadata.wasm-pack.profile.release]
# Plan §M10 (2026-05-28) — policy-transition 의 sqrt / log math 가
# i64.trunc_sat_f64_s (non-trapping saturating float→int) 명령 사용 →
# wasm-opt 의 --enable-nontrapping-float-to-int 필요.
wasm-opt = ["-Oz", "--strip-debug", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives.workspace = true
# `alloy-json-abi` provides the `Function::parse` + `.selector()` chain the
# v3 opcode-stream `inputs_abi` decoder uses to wrap a bare Solidity tuple
# signature into something `abi_resolver::decode::decode_with_function`
# accepts. `alloy-dyn-abi` is *not* a direct dep — abi-resolver already
# links it transitively for the `DynSolValue` flow, and we route through
# `bridge::convert_value` so this crate never names `DynSolValue` directly.
alloy-json-abi.workspace = true
abi-resolver.workspace = true
policy-engine.workspace = true
# Direct cedar-policy dep for the editor-facing exports
# (`cedar_exports.rs`). policy-engine itself already pulls cedar in,
# but exposing parse + Authorizer directly avoids leaking the
# engine's schema-attached evaluation path into the editor surface.
cedar-policy.workspace = true
mappers.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow = "1"
hex = "0.4"
wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
thiserror.workspace = true
# Simulation types are re-exported through a dummy wasm-bindgen fn so that
# tsify-next emits `.d.ts` declarations for every Action / WalletState /
# StateDelta. The simulation crates themselves are pure types; this is the
# canonical TS bridge.
policy-state.workspace = true
policy-transition.workspace = true
tsify-next = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
alloy-dyn-abi.workspace = true
