[package]
name = "policy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web3 wallet transaction policy engine — runtime crate (core types, oracle, Cedar wrapper, adapter trait, pipeline)"

[dependencies]
alloy-primitives.workspace = true
cedar-policy.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

# Phase 2H bridge — new ActionBody type tree from simulation-reducer is exposed
# as `policy_engine::action::v3` so downstream consumers (registryV2 mapper /
# SW wire / Cedar entry) can migrate without disturbing legacy `action::envelope`.
simulation-reducer.workspace = true

[dev-dependencies]
hex.workspace = true
