[package]
name = "policy-engine-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alloy-primitives.workspace = true
policy-engine.workspace = true
request-router.workspace = true
mappers.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
