[package]
name = "web-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API exposing abi-resolver decode functionality to a React frontend"

[dependencies]
abi-resolver = { workspace = true, features = ["sqlite"] }
alloy-primitives.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
