[package]
name = "policy-engine-adapter-eip2612"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EIP-2612 permit signature adapter for policy-engine"

[dependencies]
policy-engine.workspace = true
alloy-primitives.workspace = true
serde_json.workspace = true
thiserror.workspace = true
