[package]
name = "mappers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-dyn-abi = { workspace = true }
abi-resolver = { workspace = true }
hex = "0.4"

[[example]]
name = "validate_samples"
path = "examples/validate_samples.rs"
