[package]
name = "mappers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
anyhow = "1"
alloy-primitives = { workspace = true }
alloy-dyn-abi = { workspace = true }
abi-resolver = { workspace = true }
policy-engine = { workspace = true }
hex = "0.4"

[dev-dependencies]
alloy-json-abi = "0.8"
