[package]
name = "request-router"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Routes raw EVM RPC requests to sign-resolver or abi-resolver based on method type."

[dependencies]
sign-resolver.workspace = true
abi-resolver.workspace = true
alloy-primitives.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
