[package]
name = "policy-engine-adapter-uniswap-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Uniswap V2 Router02 swap-function adapters for policy-engine"

[dependencies]
policy-engine.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
hex.workspace = true
