[package]
name = "policy-engine-adapter-uniswap-v3"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Uniswap V3 SwapRouter adapter (exactInputSingle) for policy-engine"

[dependencies]
policy-engine.workspace = true
abi-resolver.workspace = true
# `sol!` macro hard-codes `::alloy_sol_types` paths in expanded code, so the
# adapter must name these directly.
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
hex.workspace = true
# Cross-check test runs a parallel `sol!` definition next to ours.
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
