[package]
name = "policy-engine-adapter-universal-router"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Uniswap Universal Router adapter for policy-engine"

[dependencies]
policy-engine.workspace = true
abi-resolver.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
thiserror.workspace = true
hex.workspace = true
serde_json.workspace = true

[dev-dependencies]
policy-engine.workspace = true
