[package]
name = "simulation-db"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
simulation-state = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
blake3 = "1.5"
hex = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
