[package]
name = "policy-db"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
policy-state = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
blake3 = "1.5"
hex = { workspace = true }
sqlx-core = { version = "=0.8.6", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "json", "migrate"] }
sqlx-postgres = { version = "=0.8.6", default-features = false, features = ["chrono", "json", "migrate", "uuid"] }
